refactor : BrowserFingerPrinting