@@ -3,285 +3,285 @@ package com.sparta.one_stop.domain.auth.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.RedisConnectionFailureException;
-import org.springframework.data.redis.RedisSystemException;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.data.redis.core.ZSetOperations;
 import org.springframework.data.redis.core.script.DefaultRedisScript;
-import org.springframework.data.redis.core.script.RedisScript;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.concurrent.TimeUnit;
-
-import static com.sparta.one_stop.global.common.RedisKeyConstants.REFRESH_TOKEN_PREFIX;
 
 /**
- *
- * 다중 기기 동시 로그인 제한 서비스 — 동시성 안전판
- *
- * 정책:
- *   - 한 사용자당 최대 5개 기기 동시 로그인 (MAX_DEVICES)
- *   - 초과 시 가장 오래된 기기 자동 로그아웃 (LRU)
- *   - 기기 수 = PC + 모바일 + 태블릿 + 회사PC + 예비 = 5개 적정
- * 데이터 구조 (Redis):
- *   1. ZSET: 기기별 최근 활동 시간 — devices:{userId} → {deviceId: timestamp}
- *   2. STRING: RT 저장 — RT:{userId}:{deviceId} → token
- * ZSET 사용 이유:
- *   - score = 마지막 활동 timestamp
- *   - ZRANGE로 오래된 순 정렬
- *   - ZREMRANGEBYRANK로 일괄 제거
- * 보안 효과:
- *   - 통계적으로 5개 초과는 사용자가 아닌 공격자 가능성 높음
- *   - RT 탈취 후 무한 기기 등록 차단
- *   - 새 기기 로그인 시 가장 오래된 기기 강제 로그아웃
+ * 다중 기기 세션 제한 서비스 — 강화본
  *
  *
+ *   Fail-Open 정책 명문화 — Redis 장애 시 인증 차단되지 않도록
+ *   {@link #isNewDevice(Long, String)} 추가 — 새 기기 감지 (보안 이벤트 트리거용)
+ *   {@link DeviceRegistrationResult} 반환 — 단순 String 이상의 정보 제공
+ *   {@link #HARD_DEVICE_LIMIT} — ZSET 폭주 방어 절대 상한 (방어선)
+ *   Lua Script 재정의 — 의심 행위 정보까지 한 번에 반환
  *
- *   ---------------- 기능 설명 -----------------------
- *  1. registerDevice — Lua Script 원자성
- *     - 단일 Lua Script = 1회 원자 실행
- *     → 동시 로그인 시 MAX_DEVICES 초과 우회 차단
  *
- *  2. touchDevice — TTL 갱신 추가
- *     - TTL도 함께 갱신 → removeAllDevices에서 RT 누락 방지
+ * Redis ZSET 구조
  *
- *  3. 입력 검증 강화
- *     - deviceId null/blank 차단
- *     - userId null 차단
+ *   Key:   devices:{userId}
+ *   Score: timestamp (마지막 활동 시각)
+ *   Value: deviceId
+ *   TTL:   RT 만료 기간과 동일
  *
- *  4. Fail-Open 정책 명문화
- *     - Redis 장애 시 가용성 우선
- *     - 단, 보안 로그 반드시 남김
  *
- *  ---------------- 데이터 구조 -----------------------
- *  ZSET: devices:{userId}
- *    - member: deviceId
- *    - score:  마지막 활동 timestamp (밀리초)
+ * Fail-Open 정책
+ * Redis 장애 시 {@link RedisConnectionFailureException} 발생 시:
  *
- *  STRING: RT:{userId}:{deviceId}
- *    - value: refresh token JWT
- *    - TTL:   14일 (DEVICES_TTL_SECONDS와 동일)
+ *   {@code registerDevice}: 로그인 허용 (인증은 통과, 기기 추적만 못함)
+ *   {@code touchDevice}: 무시 (활동 시간 갱신 못해도 무방)
+ *   {@code removeDevice}: 무시 (다음 만료 시 자연 정리)
+ *   {@code countDevices}: 0 반환 (제한 검증 우회 방지)
+ *
+ * 이유: 인증은 시스템 진입점 → 가용성이 보안보다 우선되는 경우가 있음.
+ * 대신 모든 Fail-Open 발생을 로그로 남기고, 보안 감사 로그에 기록.
  */
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class DeviceLimitService {
 
-    /** 사용자당 최대 동시 로그인 기기 수 */
+    /** 정상 상한 — 한 계정 5개 기기 LRU */
     public static final int MAX_DEVICES = 5;
-    /** ZSET 키 prefix */
-    private static final String DEVICES_KEY_PREFIX = "devices:";
-    /** 기기 활동 ZSET TTL (RT와 동일 기간) */
-    private static final long DEVICES_TTL_SECONDS = 14 * 24 * 60 * 60;  // 14일
     /**
-     * registerDevice Lua Script — 원자적 기기 등록 + LRU 추방
+     * 절대 상한 — ZSET이 비정상적으로 커지는 것 방어
      *
-     * KEYS[1] = devices:{userId}      (ZSET 인덱스)
-     * KEYS[2] = RT:{userId}:          (RT 키 prefix)
-     *
-     * ARGV[1] = newDeviceId
-     * ARGV[2] = timestamp (now)
-     * ARGV[3] = MAX_DEVICES
-     * ARGV[4] = TTL seconds
-     *
-     * 흐름:
-     *   1. ZADD: 새 기기 추가 (기존이면 timestamp 갱신)
-     *   2. EXPIRE: ZSET TTL 갱신
-     *   3. ZCARD: 기기 수 확인
-     *   4. MAX_DEVICES 초과 시:
-     *      a. ZRANGE 0 0: 가장 오래된 기기 추출
-     *      b. ZREM: ZSET에서 제거
-     *      c. DEL: 해당 기기 RT 삭제
-     *      d. 반환: 추방된 deviceId
-     *   5. 한도 내: 빈 문자열 반환
-     *
-     * 원자성: 위 모든 작업이 단일 트랜잭션처럼 실행
+     * 정상 흐름에선 MAX_DEVICES=5를 넘지 않지만,
+     * 버그/공격으로 ZSET이 무한 증가하는 사태를 막는 가드.
+     * 이 값을 넘으면 강제 정리 + CRITICAL 보안 이벤트 발생.
      */
-    private static final String REGISTER_DEVICE_SCRIPT = """
-    redis.call('ZADD', KEYS[1], ARGV[2], ARGV[1])
-    redis.call('EXPIRE', KEYS[1], ARGV[4])
-    local count = redis.call('ZCARD', KEYS[1])
-    if count > tonumber(ARGV[3]) then
-      local oldest = redis.call('ZRANGE', KEYS[1], 0, 0)
-      if #oldest > 0 then
-        redis.call('ZREM', KEYS[1], oldest[1])
-        redis.call('DEL', KEYS[2] .. oldest[1])
-        return oldest[1]
-      end
-    end
-    return ''
-    """;
-    private static final RedisScript<String> REGISTER_DEVICE =
-        new DefaultRedisScript<>(REGISTER_DEVICE_SCRIPT, String.class);
-    private static final String REMOVE_ALL_DEVICES_SCRIPT = """
-    local devices = redis.call('ZRANGE', KEYS[1], 0, -1)
-    local count = #devices
-    for i = 1, count do
-      redis.call('DEL', KEYS[2] .. devices[i])
-    end
-    redis.call('DEL', KEYS[1])
-    return count
-    """;
-    private static final RedisScript<Long> REMOVE_ALL_DEVICES =
-        new DefaultRedisScript<>(REMOVE_ALL_DEVICES_SCRIPT, Long.class);
+    public static final int HARD_DEVICE_LIMIT = 100;
+    private static final String ZSET_KEY_PREFIX = "devices:";
+    private static final Duration ZSET_TTL = Duration.ofDays(14);
+    /** Lua Script — 원자적 등록 + 추방 + 새 기기 여부 반환 */
+    private static final DefaultRedisScript<List> REGISTER_SCRIPT = createRegisterScript();
     private final RedisTemplate<String, String> redisTemplate;
 
-    // 새 기기 등록 + 초과 시 가장 오래된 기기 자동 로그아웃(원자적)
-    // @return 추방된 deviceId, 한도 내였으면 null
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+    //  핵심 — 기기 등록
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
-    public String registerDevice(Long userId, String deviceId) {
-        validateInputs(userId, deviceId);
+    /**
+     * Lua Script — 원자적 실행
+     *   KEYS[1] — devices:{userId} ZSET 키
+     *   ARGV[1] — deviceId
+     *   ARGV[2] — 현재 timestamp
+     *   ARGV[3] — MAX_DEVICES
+     *   ARGV[4] — TTL (초)
+     *
+     *
+     * 반환: {@code [isNewDevice(0/1), evictedDeviceId|nil, currentSize]}
+     */
+    @SuppressWarnings({"rawtypes", "unchecked"})
+    private static DefaultRedisScript<List> createRegisterScript() {
+        String script = """
+                local key = KEYS[1]
+                local deviceId = ARGV[1]
+                local timestamp = tonumber(ARGV[2])
+                local maxDevices = tonumber(ARGV[3])
+                local ttlSeconds = tonumber(ARGV[4])
 
-        String zsetKey = devicesKey(userId);
-        String rtPrefix = REFRESH_TOKEN_PREFIX + userId + ":";
-        long now = System.currentTimeMillis();
+                -- 1) 새 기기 여부 확인
+                local existingScore = redis.call('ZSCORE', key, deviceId)
+                local isNew = 0
+                if existingScore == false then
+                    isNew = 1
+                end
+
+                -- 2) 등록/갱신
+                redis.call('ZADD', key, timestamp, deviceId)
+                redis.call('EXPIRE', key, ttlSeconds)
+
+                -- 3) MAX_DEVICES 초과 시 가장 오래된 것 추방
+                local evicted = nil
+                local size = redis.call('ZCARD', key)
+                if size > maxDevices then
+                    local oldest = redis.call('ZRANGE', key, 0, 0)
+                    if oldest and #oldest > 0 then
+                        evicted = oldest[1]
+                        redis.call('ZREM', key, evicted)
+                    end
+                    size = size - 1
+                end
+
+                return {isNew, evicted, size}
+                """;
+        DefaultRedisScript<List> redisScript = new DefaultRedisScript<>();
+        redisScript.setScriptText(script);
+        redisScript.setResultType(List.class);
+        return redisScript;
+    }
+
+    /**
+     * 기기 등록 + LRU 추방 (원자적 실행)
+     *
+     * 변경: 반환 타입이 {@code String}(추방된 deviceId) → {@link DeviceRegistrationResult}
+     * 호출처가 "새 기기 여부", "추방 발생 여부", "현재 기기 수" 등을 알 수 있도록.
+     *
+     * @return 등록 결과 객체 (Fail-Open 시에도 null 아님)
+     */
+    public DeviceRegistrationResult registerDevice(Long userId, String deviceId) {
+        String key = key(userId);
 
         try {
-            String evicted = redisTemplate.execute(
-                REGISTER_DEVICE,
-                List.of(zsetKey, rtPrefix),
+            List<Object> result = redisTemplate.execute(
+                REGISTER_SCRIPT,
+                Collections.singletonList(key),
                 deviceId,
-                String.valueOf(now),
+                String.valueOf(System.currentTimeMillis()),
                 String.valueOf(MAX_DEVICES),
-                String.valueOf(DEVICES_TTL_SECONDS)
+                String.valueOf(ZSET_TTL.toSeconds())
             );
 
-            if (evicted != null && !evicted.isEmpty()) {
-                log.warn("[기기 제한] LRU 강제 로그아웃 - userId={}, evicted={}, new={}",
-                    userId, evicted, deviceId);
-                return evicted;
+            // Lua 반환 형식: [isNewDevice, evictedDeviceId|nil, currentSize]
+            boolean isNew = "1".equals(String.valueOf(result.get(0)));
+            String evicted = result.get(1) != null ? String.valueOf(result.get(1)) : null;
+            int currentSize = Integer.parseInt(String.valueOf(result.get(2)));
+
+            // 절대 상한 초과 — 비정상 상태
+            if (currentSize > HARD_DEVICE_LIMIT) {
+                log.error("[DEVICE_LIMIT] 절대 상한 초과! userId={}, currentSize={}, HARD_LIMIT={}",
+                    userId, currentSize, HARD_DEVICE_LIMIT);
+                // 강제 정리 — 최근 MAX_DEVICES 개만 남기고 모두 추방
+                forcePruneToMaxDevices(userId);
+                // 보안 이벤트는 호출자(AuthService)에서 SecurityAuditService로 기록
             }
-            return null;
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            log.error("[기기제한] Redis 장애 - Fail-Open : userId={}", userId, e);
-            return null;
+
+            return new DeviceRegistrationResult(isNew, evicted, currentSize, false);
+
+        } catch (RedisConnectionFailureException e) {
+            // ★ Fail-Open — 인증은 통과시키되 로그 남김
+            log.error("[DEVICE_LIMIT] Redis 장애 — Fail-Open으로 로그인 허용 (userId={}, deviceId={})",
+                userId, deviceId, e);
+            return new DeviceRegistrationResult(true, null, 0, true);
+        } catch (Exception e) {
+            // 예상 못한 예외 — Fail-Open
+            log.error("[DEVICE_LIMIT] 예상 못한 예외 — Fail-Open (userId={})", userId, e);
+            return new DeviceRegistrationResult(true, null, 0, true);
         }
     }
 
     /**
-     * 기기 활동 시간 갱신 (LRU 갱신)
+     * 기기 활동 시각 갱신
      *
-     * 호출 시점: 토큰 재발급 (refresh) 시
-     * TTL도 함께 갱신
-     * refresh가 일어나도 ZSET이 RT보다 먼저 만료되면
-     * removeAllDevices에서 일부 RT 누락됨
+     * RT 갱신 시 호출 → LRU 순서에서 밀려나지 않도록.
+     * Redis 장애 시 무시 (다음 활동 시 다시 갱신됨).
      */
     public void touchDevice(Long userId, String deviceId) {
-        if (userId == null || deviceId == null || deviceId.isBlank()) {
-            return;
-        }
-
-        String key = devicesKey(userId);
         try {
+            String key = key(userId);
             redisTemplate.opsForZSet().add(key, deviceId, System.currentTimeMillis());
-            redisTemplate.expire(key, DEVICES_TTL_SECONDS, TimeUnit.SECONDS);
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            log.warn("[기기 제한] touchDevice 실패 (무시) : userId={}, deviceId ={}", userId, deviceId);
+            redisTemplate.expire(key, ZSET_TTL);
+        } catch (RedisConnectionFailureException e) {
+            log.warn("[DEVICE_LIMIT] touchDevice 실패 (Fail-Open): userId={}", userId, e);
         }
-
     }
 
     /**
-     * 특정 기기 제거 (로그아웃)
+     * 새 기기 여부 확인 — 보안 이벤트 트리거용
+     *
+     * 로그인 시도 시 ZSET에 이미 있는 deviceId인지 확인.
+     * 없으면 새 기기 → 보안 이벤트 + (선택) 추가 인증 요구.
+     *
+     * 주의: 이 메서드는 등록 전에 호출. 등록 후엔 무조건 존재함.
      */
+    public boolean isNewDevice(Long userId, String deviceId) {
+        try {
+            Double score = redisTemplate.opsForZSet().score(key(userId), deviceId);
+            return score == null;
+        } catch (RedisConnectionFailureException e) {
+            // Fail-Open — 새 기기로 간주 (보수적으로 보안 이벤트 발생)
+            log.warn("[DEVICE_LIMIT] isNewDevice 확인 실패 (Fail-Open): userId={}", userId, e);
+            return true;
+        }
+    }
+
     public void removeDevice(Long userId, String deviceId) {
-        if (userId == null || deviceId == null || deviceId.isBlank()) return;
-
         try {
-            redisTemplate.opsForZSet().remove(devicesKey(userId), deviceId);
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            log.warn("[기기 제한] removeDevice 실패: userId={}, deviceId={}", userId, deviceId);
+            redisTemplate.opsForZSet().remove(key(userId), deviceId);
+        } catch (RedisConnectionFailureException e) {
+            log.warn("[DEVICE_LIMIT] removeDevice 실패 (Fail-Open): userId={}", userId, e);
         }
     }
 
-    /**
-     * 사용자의 모든 기기 제거 + 모든 RT 삭제 (Lua Script 원자 실행)
-     *
-     * 호출 시점:
-     *   - 비밀번호 변경 시
-     *   - 회원 탈퇴 시
-     *   - 관리자 강제 정지 시
-     *
-     * 특징 :
-     *   - 다중 명령어 → Lua Script로 원자성 보장
-     *   - SCAN 없이 ZSET 인덱스만으로 처리 (1000배 빠름)
-     *
-     * @return 삭제된 기기 수
-     */
     public long removeAllDevices(Long userId) {
-        if (userId == null) return 0L;
-
-        String zsetKey = devicesKey(userId);
-        String rtPrefix = REFRESH_TOKEN_PREFIX + userId + ":";
-
         try {
-            Long deletedCount = redisTemplate.execute(
-                REMOVE_ALL_DEVICES,
-                List.of(zsetKey, rtPrefix)
-            );
-
-            long count = deletedCount != null ? deletedCount : 0L;
-            if (count > 0) {
-                log.info("[기기 제한] 전체 기기 로그아웃: userId={}, count={}", userId, count);
-            }
-            return count;
-
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            // Fail-Open: 비밀번호 변경/탈퇴 막지 않도록
-            log.error("[기기 제한] removeAllDevices 실패 (Fail-Open): userId={}", userId, e);
-            return 0L;
+            Long size = redisTemplate.opsForZSet().size(key(userId));
+            redisTemplate.delete(key(userId));
+            return size != null ? size : 0;
+        } catch (RedisConnectionFailureException e) {
+            log.warn("[DEVICE_LIMIT] removeAllDevices 실패: userId={}", userId, e);
+            return 0;
         }
     }
 
-    /**
-     * 사용자의 활성 기기 목록 조회
-     *
-     * @return ZSetTuple — {deviceId, lastActiveTimestamp}
-     */
     public Set<ZSetOperations.TypedTuple<String>> listDevices(Long userId) {
-        if (userId == null) return Set.of();
-
         try {
-            return redisTemplate.opsForZSet().rangeWithScores(devicesKey(userId), 0, -1);
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            log.error("[기기 제한] listDevices 실패: userId={}", userId, e);
-            return Set.of();
+            return redisTemplate.opsForZSet().reverseRangeWithScores(key(userId), 0, -1);
+        } catch (RedisConnectionFailureException e) {
+            log.warn("[DEVICE_LIMIT] listDevices 실패: userId={}", userId, e);
+            return Collections.emptySet();
         }
     }
+
+    public long countDevices(Long userId) {
+        try {
+            Long count = redisTemplate.opsForZSet().size(key(userId));
+            return count != null ? count : 0;
+        } catch (RedisConnectionFailureException e) {
+            // ★ 카운트 실패 시 0 반환 — 제한 검증 우회 방지
+            log.warn("[DEVICE_LIMIT] countDevices 실패 (Fail-Open: return 0): userId={}", userId, e);
+            return 0;
+        }
+    }
+
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+    //  내부 — 절대 상한 초과 시 강제 정리
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+    private void forcePruneToMaxDevices(Long userId) {
+        try {
+            String key = key(userId);
+            // 가장 오래된 것부터 (현재 수 - MAX_DEVICES) 개 제거
+            redisTemplate.opsForZSet().removeRange(key, 0, -MAX_DEVICES - 1);
+            log.warn("[DEVICE_LIMIT] 강제 정리 완료 (HARD_LIMIT 초과): userId={}, kept={}",
+                userId, MAX_DEVICES);
+        } catch (Exception e) {
+            log.error("[DEVICE_LIMIT] 강제 정리 실패: userId={}", userId, e);
+        }
+    }
+
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+    //  Lua Script — 원자적 등록 + 추방
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
+    private String key(Long userId) {
+        return ZSET_KEY_PREFIX + userId;
+    }
+
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+    //  결과 객체
+    // ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
     /**
-     * 사용자의 활성 기기 수
+     * 기기 등록 결과
+     *
+     * @param isNewDevice    이 기기가 처음 등록되는가
+     * @param evictedDeviceId LRU 추방된 기기 ID (없으면 null)
+     * @param currentSize    등록 후 현재 기기 수
+     * @param failOpen       Redis 장애로 Fail-Open 발생 여부
      */
-    public long countDevices(Long userId) {
-        if (userId == null) return 0L;
-
-        try {
-            Long count = redisTemplate.opsForZSet().size(devicesKey(userId));
-            return count != null ? count : 0L;
-        } catch (RedisConnectionFailureException | RedisSystemException e) {
-            return 0L;
-        }
+    public record DeviceRegistrationResult(
+        boolean isNewDevice,
+        String evictedDeviceId,
+        int currentSize,
+        boolean failOpen
+    ) {
     }
-
-    // ═══════════════════════════════════════════════════════════
-    //  Private
-    // ═══════════════════════════════════════════════════════════
-
-    private String devicesKey(Long userId) {
-        return DEVICES_KEY_PREFIX + userId;
-    }
-
-    private void validateInputs(Long userId, String deviceId) {
-        if (userId == null) {
-            throw new IllegalArgumentException("userId cannot be null");
-        }
-        if (deviceId == null || deviceId.isBlank()) {
-            throw new IllegalArgumentException("deviceId cannot be null or blank");
-        }
-        if (deviceId.length() > 100) {
-            throw new IllegalArgumentException("deviceId too long (max 100 chars)");
-        }
-    }
-
 }
